# forester-fmt

./: .gitignore  README.md  dune-project  flake.nix  forester_format.opam  forester_format.opam.template
lib/: Forester_format.ml  Forester_format.mli  Pandoc_filter.ml  Pandoc_filter.mli  dune
test/: dune  expected.tree  test.tree  test_forester_format.ml
